[gd_scene load_steps=2 format=3 uid="uid://cc2mpkftgnqei"]

[ext_resource type="Script" uid="uid://dkpdytpgqs08d" path="res://game.gd" id="1_t0j0g"]

[node name="Game" type="Node2D"]
script = ExtResource("1_t0j0g")

[node name="ClickButton" type="Button" parent="."]
offset_left = 228.0
offset_top = 215.0
offset_right = 378.0
offset_bottom = 287.0
text = "Click Me!"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 231.0
offset_top = 162.0
offset_right = 376.0
offset_bottom = 199.0
text = "Score: 0"
horizontal_alignment = 1

[node name="InventoryLabel" type="Label" parent="."]
offset_left = 40.0
offset_top = 350.0
offset_right = 560.0
offset_bottom = 450.0
text = "Inventory:"

[node name="LeaderboardLabel" type="Label" parent="."]
offset_left = 40.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 200.0
text = "Leaderboard:"

[node name="PowerupLabel" type="Label" parent="."]
offset_left = 400.0
offset_top = 40.0
offset_right = 560.0
offset_bottom = 80.0
text = "Power-up: Inactive"

[node name="PowerupButton" type="Button" parent="."]
offset_left = 400.0
offset_top = 90.0
offset_right = 560.0
offset_bottom = 130.0
text = "Buy Power-up"

[node name="SaveButton" type="Button" parent="."]
offset_left = 40.0
offset_top = 500.0
offset_right = 140.0
offset_bottom = 540.0
text = "Save"

[node name="LoadButton" type="Button" parent="."]
offset_left = 150.0
offset_top = 500.0
offset_right = 250.0
offset_bottom = 540.0
text = "Load"
